--- a/src/app/Views/Elements/nominales-selector/nominales-selector.component.html
+++ b/src/app/Views/Elements/nominales-selector/nominales-selector.component.html
@@ -1,7 +1,7 @@
 <div class="cont">
     <div class="block">
         <div class="item" [ngClass]="{'selected': nominale == selectedNominale}" *ngFor="let nominale of nominales" (click)="selectNominale(nominale)">
-            {{ nominale }}
+            {{ nominale.toFixed(2) }}
         </div>
     </div>
 </div>
