--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,14 +47,30 @@
                 .game {
                     height: 705px;
                 }
+                .informationText {
+                    margin-top: -45px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding-bottom: 10px;
+                    span {
+                        font-size: 22px;
+                        color: #fff;
+                        font-weight: bold;
+                    }
+                }
 
                 .bottom-panel {
                     height: 80px;
-                    margin-top: -30px;
+                    margin-top: -20px;
                     padding: 5px;
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    
+                    &.withText {
+                        margin-top: 0px;
+                    }
                 }
             }
         }
@@ -91,9 +107,16 @@
                     .game {
                         height: 525px;
                     }
+                    .informationText {
+                        margin-top: 50px;
+                        padding-bottom: 6px;
+                    }
                     .bottom-panel {
                         height: 75px;
                         margin-top: 65px;
+                        &.withText {
+                            margin-top: 5px;
+                        }
                     }
                 }
             }
