--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -12,7 +12,7 @@
         <app-bet-block *ngFor="let item of betMultipliers;let i=index" currency="GEL" [value]="bet(item)" [index]="i" [isSelected]="bet(item) == selectedBet" (onAction)="bubbleAction($event)"></app-bet-block>
     </div>
     <div class="block last_win">
-        <app-label-value label="last win" value="100"></app-label-value>
+        <app-label-value label="last win" [value]="data.game.wonAmmount"></app-label-value>
     </div>
     <div class="block action_buttons">
         <div class="icon info"></div>
