--- a/src/app/Views/Elements/bet-block/bet-block.component.scss
+++ b/src/app/Views/Elements/bet-block/bet-block.component.scss
@@ -57,3 +57,21 @@
         }
     }  
 }
+
+@media only screen and (max-width: 920px) {
+    .cont {
+        width: 35px;
+        height: 35px;
+        .label {
+            &.currency {
+                font-size: 8px;
+            }
+            &.value {
+                font-size: 11px;
+            }
+            &.bet {
+                font-size: 8px;
+            }
+        }
+    }  
+}
