--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,16 @@
         <div class="game">
           <app-game-container class="container" [gameData]="data.game" [lines]="data.winByLines" (onAction)="handleAction($event)" #gameContainer></app-game-container>
         </div>
-        <div class="informationText" *ngIf="freeSpins > 0">
-          <span> დარჩენილია {{freeSpins}} ფრისპინი</span>
+        <div class="informationText">
+          <span> {{ informationText }}</span>
         </div>
-        <div class="bottom-panel" [ngClass]="{'withText': freeSpins > 0}">
-            <app-bonus-button (onAction)="handleAction($event)"></app-bonus-button>
+        <div class="bottom-panel">
+            <app-bonus-button [freeSpins]="data.game.freeSpins.count" (onAction)="handleAction($event)"></app-bonus-button>
             <app-action-panel [data]="data" (onAction)="handleAction($event)"></app-action-panel>
         </div>
       </div>
       <div class="side right">
-        <app-lines [hasButtons]="true" [nominales]="data.game.nominales" [selectedNominale]="data.game.selectedNominale" (spin)="onSpin()" (autoSpin)="onAutoSpin()" (onAction)="handleAction($event)"></app-lines>
+        <app-lines [hasButtons]="true" [data]="data" [nominales]="data.game.nominales" [selectedNominale]="data.game.selectedNominale" (spin)="onSpin()" (autoSpin)="onAutoSpin()" (onAction)="handleAction($event)"></app-lines>
       </div>
     </div>
   </div>
