--- a/src/app/Views/game-container/game-container.component.scss
+++ b/src/app/Views/game-container/game-container.component.scss
@@ -25,3 +25,24 @@
         }
     }
 }
+
+@media only screen and (max-width: 1400px) {
+    .container {
+        width: 1000px;
+    }
+}
+
+@media only screen and (max-width: 920px) {
+    .container {
+        width: 100%;
+        height: 100%;
+        .game {
+            height: 100%;
+            margin-bottom: 5px;
+            .gameContainer {
+                height: 100%;
+                width: 100%;
+            }
+        }
+    }
+}
