add bonus modals

--- a/src/app/Modal/modal.component.html
+++ b/src/app/Modal/modal.component.html
@@ -1,24 +1,30 @@
 <div class="modal" *ngIf="activeModal">
-    <div class="header">
-        <span class="title" *ngIf="activeModal.title.length > 0" >
-            {{ activeModal.title }}
-        </span>
-    </div>
-    <div class="content">
-        <span *ngIf="activeModal.close" class="close" (click)="close()"> X </span>
-        <app-info
-            *ngIf="data.modal.currentModal == 'info'"
-            [modalData]="activeModal"
-            (onAction)="bubbleAction($event)"
-        ></app-info>
-        <app-buy-freespins
-            *ngIf="data.modal.currentModal == 'bonus'"
-            [freeSpins]="data.freespinTypes"
-            [selectedBet]="data.game.selectedBet"
-            [betMultipliers]="data.game.betMultipliers"
-            [gameLine]="data.game.gameLine"
-            [selectedNominale]="data.game.selectedNominale"
-            (onAction)="bubbleAction($event)"
-        ></app-buy-freespins>
+    <div class="cont">
+        <div class="header">
+            <span class="title" *ngIf="activeModal.title.length > 0" >
+                {{ activeModal.title }}
+            </span>
+        </div>
+        <div class="content">
+            <span *ngIf="activeModal.close" class="close" (click)="close()"> X </span>
+            <app-info
+                *ngIf="data.modal.currentModal == 'info'"
+                [modalData]="activeModal"
+                (onAction)="bubbleAction($event)"
+            ></app-info>
+            <app-buy-freespins
+                *ngIf="data.modal.currentModal == 'bonus'"
+                [freeSpins]="data.freespinTypes"
+                [selectedBet]="data.game.selectedBet"
+                [nominales]="data.game.nominales"
+                [betMultipliers]="data.game.betMultipliers"
+                [gameLine]="data.game.gameLine"
+                [data]="data"
+                [selectedNominale]="data.game.selectedNominale"
+                (onAction)="bubbleAction($event)"
+            ></app-buy-freespins>
+            <app-bonus-type *ngIf="data.modal.currentModal == 'bonus_type'" [data]="activeModal" (onAction)="bubbleAction($event)"></app-bonus-type>
+            <app-bonus-win *ngIf="data.modal.currentModal == 'bonus_win'" [data]="activeModal" (onAction)="bubbleAction($event)"></app-bonus-win>
+        </div>
     </div>
 </div>
