--- a/src/app/Modal/modal.component.scss
+++ b/src/app/Modal/modal.component.scss
@@ -9,23 +9,52 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    .header {
-        .title {
-            font-size: 45px;
-            font-weight: bold;
-            color: #fff;
+    .cont {
+        .header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .title {
+                font-size: 45px;
+                font-weight: bold;
+                color: #fff;
+            }
+        }
+        .content {
+            position: relative;
+            .close {
+                cursor: pointer;
+                position: absolute;
+                top: -50px;
+                right: 10px;
+                font-size: 35px;
+                font-weight: bold;
+                color: #F7E300;    
+            }
         }
     }
-    .content {
-        position: relative;
-        .close {
-            cursor: pointer;
-            position: absolute;
-            top: -50px;
-            right: 10px;
-            font-size: 35px;
-            font-weight: bold;
-            color: #F7E300;    
+}
+@media only screen and (max-width: 1400px) {
+    .modal {
+        .cont {
+            transform: scale(0.8);
+            transform-origin: center;
+        }
+    }
+}
+@media only screen and (max-width: 920px) {
+    .modal {
+        .cont {
+            transform: scale(0.5);
+            transform-origin: center;
+        }
+    }
+}
+@media only screen and (max-width: 500px) {
+    .modal {
+        .cont {
+            transform: scale(0.35);
+            transform-origin: center;
         }
     }
 }
