--- a/src/app/Views/Elements/bet-block/bet-block.component.scss
+++ b/src/app/Views/Elements/bet-block/bet-block.component.scss
@@ -58,6 +58,24 @@
     }  
 }
 
+@media only screen and (max-width: 1600px) {
+    .cont {
+        width: 55px;
+        height: 55px;
+        .label {
+            &.currency {
+                font-size: 11px;
+            }
+            &.value {
+                font-size: 20px;
+            }
+            &.bet {
+                font-size: 11px;
+            }
+        }
+    }  
+}
+
 @media only screen and (max-width: 920px) {
     .cont {
         width: 35px;
@@ -74,4 +92,45 @@
             }
         }
     }  
+}
+
+@media only screen and (max-width: 500px) {
+    .cont {
+        width: 25px;
+        height: 25px;
+        border: 2px solid #AAB1B0;
+        &.selected {
+            border: 2px solid #A90006;
+        }
+        .label {
+            &.currency {
+                font-size: 4px;
+            }
+            &.value {
+                font-size: 7px;
+            }
+            &.bet {
+                font-size: 4px;
+            }
+        }
+    }    
+}
+
+@media only screen and (max-width: 420px) {
+    .cont {
+        width: 20px;
+        height: 20px;
+        border-radius: 5px;
+        .label {
+            &.currency {
+                font-size: 3px;
+            }
+            &.value {
+                font-size: 6px;
+            }
+            &.bet {
+                font-size: 3px;
+            }
+        }
+    }    
 }
