--- a/src/app/Views/action-panel/action-panel.component.scss
+++ b/src/app/Views/action-panel/action-panel.component.scss
@@ -89,6 +89,18 @@
     
 }
 
+@media only screen and (max-width: 1080px) {
+    .content {
+        width: 800px;
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .content {
+        width: 770px;
+    }
+}
+
 @media only screen and (max-width: 920px) {
     .content {
         width: 555px;
@@ -102,5 +114,60 @@
             }
         }
     }
-    
+}
+
+@media only screen and (max-width: 500px) {
+    .content {
+        width: 350px;
+        height: 20px;
+        border: 10px solid transparent;
+        border-image: url('../../../assets/borders/bottom_big.svg') 30 round;
+        .block {
+            margin: 5px;
+            &.balance {
+                padding-left: 5px;
+            }
+            &.action_buttons {
+                .icon {
+                    width: 8px;
+                    height: 8px;
+                }
+            }
+            &.nominales {
+                gap: 10px;
+            }
+            
+            &.action_buttons {
+                padding-right: 5px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .content {
+        width: calc(100% - 30px);
+        height: 20px;
+        border: 10px solid transparent;
+        border-image: url('../../../assets/borders/bottom_big.svg') 30 round;
+        .block {
+            margin: 1px;
+            &.balance {
+                padding-left: 5px;
+            }
+            &.action_buttons {
+                .icon {
+                    width: 8px;
+                    height: 8px;
+                }
+            }
+            &.nominales {
+                gap: 5px;
+            }
+            
+            &.action_buttons {
+                padding-right: 5px;
+            }
+        }
+    }
 }
