--- a/src/app/Views/game/game.component.scss
+++ b/src/app/Views/game/game.component.scss
@@ -44,10 +44,59 @@
         }
     }
 }
+
+@media only screen and (max-width: 1080px) {
+    #reels {
+        .reel {
+            width: 130px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1040px) {
+    #reels {
+        .reel {
+            width: 120px;
+        }
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    #reels {
+        .reel {
+            width: 120px;
+            &:not(:first-child) {
+                margin-left: 7px;
+            }
+            &:not(:last-child) {
+                margin-right: 7px;
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 920px) {
     #reels {
         .reel {
             width: 70px;
+            border: 10px solid transparent;
+            border-image: url('../../../assets/borders/middle.svg') 25 round;
+            &:not(:first-child) {
+                margin-left: 5px;
+            }
+            &:not(:last-child) {
+                margin-right: 5px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #reels {
+        .reel {
+            width: 30px;
+            border: 5px solid transparent;
+            border-image: url('../../../assets/borders/middle.svg') 25 round;
             &:not(:first-child) {
                 margin-left: 5px;
             }
