--- a/src/app/Views/lines/lines.component.scss
+++ b/src/app/Views/lines/lines.component.scss
@@ -190,11 +190,49 @@
     }
 }
 
+@media only screen and (max-width: 980px) {
+    .cont {
+        width: 40px;
+        height: 400px;
+        margin-top: -80px;
+        
+        .buttons {
+            width: 135px;
+            height: 300px;
+            .block {
+                .nominales-selector {
+                    position: absolute;
+                    left: -325px;
+                }
+                .autospin {
+                    width: 75px;
+                    height: 105px;
+                    &.nominales_selector {
+                        .icon {
+                            width: 30px;
+                            height: 30px;
+                        }
+                        .value {
+                            font-size: 15px;
+                        }
+                    }
+                }
+                .spin {
+                    width: 145px;
+                    height: 185px;
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 920px) {
     .cont {
         width: 20px;
         height: 230px;
         margin-top: -10px;
+        border: 10px solid transparent;
+        border-image: url('../../../assets/borders/side.svg') 25 round;
         .lines {
             font-size: 20px;
             font-weight: 900;
@@ -233,6 +271,59 @@
                 .spin {
                     width: 100px;
                     height: 170px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .cont {
+        width: 10px;
+        height: 100px;
+        margin-top: 15px;
+        border: 10px solid transparent;
+        border-image: url('../../../assets/borders/side.svg') 25 round;
+        .lines {
+            font-size: 13px;
+            font-weight: 900;
+            .fixedLines {
+                span {
+                    font-size: 8px;
+                    margin-bottom: 0px;
+                    &:last-child{
+                        margin-top: 15px;
+                        font-size: 8px;
+                    }
+                }
+            }
+        }
+        .buttons {
+            width: 40px;
+            height: 750px;
+            .block {
+                .nominales-selector {
+                    position: absolute;
+                    left: -310px;
+                }
+                .autospin {
+                    width: 35px;
+                    height: 30px;
+                    margin-bottom: -5px;
+                    &.nominales_selector {
+                        margin-top: -5px;
+                        .icon {
+                            width: 15px;
+                            height: 15px;
+                        }
+                        .value {
+                            font-size: 6px;
+                        }
+                    }
+                }
+                .spin {
+                    width: 40px;
+                    height: 40px;
                 }
             }
         }
