--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -151,6 +151,172 @@
         }
     }
 }
+
+@media only screen and (max-width: 1355px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 450px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1330px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 440px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1315px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 430px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 415px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1280px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 390px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1240px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 350px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 315px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 270px);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1110px) {
+    .content {
+        .container {
+            .cont {
+                .middle {
+                    width: calc(100vw - 230px);
+                    .bottom-panel {
+                        margin-left: -120px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .content {
+        .container {
+            .cont {
+                .side {
+                    &.left {
+                        margin-right: 15px;
+                    }
+                    &.right {
+                        margin-left: 5px;
+                    }
+                    
+                }
+                .middle {
+                    width: calc(100vw - 200px);
+                    .game {
+                        height: 365px;
+                    }
+                    .bottom-panel {
+                        margin-left: -100px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    .content {
+        .container {
+            .cont {
+                .side {
+                    &.left {
+                        margin-right: 5px;
+                    }
+                    &.right {
+                        margin-left: 0px;
+                    }
+                    
+                }
+                .middle {
+                    width: calc(100vw - 150px);
+                    .game {
+                        height: 365px;
+                    }
+                    .bottom-panel {
+                        margin-left: -80px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 920px) {
     .content {    
         .container {
@@ -166,7 +332,7 @@
             .cont {
                 .side {
                     height: 210px;
-                    margin-top: -100px;
+                    margin-top: -120px;
                     
                     &.right {
                         margin-left: 5px;
@@ -174,10 +340,10 @@
                     
                 }
                 .middle {
-                    width: calc(100vw - 350px);
+                    width: calc(100vw - 360px);
                     .game {
                         width: 100%;
-                        height: 210px;
+                        height: 220px;
                         margin: 0;
                     }
                     .informationText {
@@ -198,3 +364,143 @@
         }
     }
 }
+
+@media only screen and (max-width: 500px) {
+    .content {    
+        .container {
+            margin: 0;
+            .header {
+                margin: 5px;
+                
+                .title {
+                    width: 150px;
+                    height: 20px;
+                }
+            }    
+            .cont {
+                .side {
+                    height: 100px;
+                    margin-right: 5px;
+                    
+                    &.right {
+                        margin-left: 5px;
+                    }
+                    
+                }
+                .middle {
+                    width: calc(100vw - 240px);
+                    .game {
+                        width: 100%;
+                        height: 100px;
+                        margin: 0;
+                    }
+                    .informationText {
+                        margin-top: 40px;
+                        padding-bottom: 6px;
+                        span {
+                            font-size: 17px;
+                        }
+                    }
+                    .bottom-panel {
+                        width: 400px;
+                        height: 20px;
+                        margin-top: -10px;
+                        margin-left: -90px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .content {    
+        .container {
+            margin: 0;
+            .header {
+                margin: 5px;
+                
+                .title {
+                    width: 150px;
+                    height: 20px;
+                }
+            }    
+            .cont {
+                .side {
+                    height: 85px;
+                    &.left {
+                        margin-right: 10px;
+                    }
+                    
+                    &.right {
+                        margin-left: 10px;
+                    }
+                    
+                }
+                .middle {
+                    width: calc(100vw - 190px);
+                    .game {
+                        width: 100%;
+                        height: 95px;
+                        margin: 0;
+                    }
+                    .informationText {
+                        margin-top: 20px;
+                        padding-bottom: 0px;
+                        span {
+                            font-size: 13px;
+                        }
+                    }
+                    .bottom-panel {
+                        width: calc(100% - 50px);
+                        height: 40px;
+                        margin-top: -15px;
+                        margin-left: -90px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .content {
+        .container {
+            .header {
+                .title {
+                    width: 120px;
+                }
+            }    
+            .cont {
+                .middle {
+                    width: calc(100vw - 170px);
+                    .game {
+                        height: 95px;
+                    }
+                    .informationText {
+                        padding-bottom: 5px;
+                    }
+                    .bottom-panel {
+                        margin-left: -70px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// @media only screen and (max-width: 420px) {
+//     .content {
+//         .container {    
+//             .cont {
+//                 .middle {
+//                     width: calc(100vw - 120px);
+//                     .bottom-panel {
+//                         width: calc(100% - 130px);
+//                         margin-left: -60px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
