--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" *ngIf="loading == false">
   <div class="container">
     <div class="header">
       <div class="title"></div>
@@ -26,3 +26,4 @@
   </div>
 </div>
 <app-modal *ngIf="data.modal.currentModal !== ''" class="modal" [data]="data" (onAction)="handleAction($event)"></app-modal>
+<app-loader *ngIf="loading == true"></app-loader>
