--- a/src/app/Modal/modal.component.html
+++ b/src/app/Modal/modal.component.html
@@ -18,6 +18,7 @@
                 [selectedBet]="data.game.selectedBet"
                 [nominales]="data.game.nominales"
                 [betMultipliers]="data.game.betMultipliers"
+                [selectedMultiplierIndex]="data.game.selectedMultiplierIndex"
                 [gameLine]="data.game.gameLine"
                 [data]="data"
                 [selectedNominale]="data.game.selectedNominale"
