--- a/src/app/Views/lines/lines.component.html
+++ b/src/app/Views/lines/lines.component.html
@@ -13,7 +13,7 @@
             <div class="spin" (click)="onSpin()" #spinButton></div>
             <div class="nominales_selector autospin" (click)="toggleNMSelector()">
                 <div class="icon"></div>
-                <div class="value"> {{ selectedNominale }} </div>
+                <div class="value"> {{ nominale }} </div>
             </div>
         </div>
     </div>
