--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="middle">
         <div class="game">
-          <app-game-container class="container" [gameData]="data.game" [lines]="data.winByLines" (onAction)="handleAction($event)" #gameContainer></app-game-container>
+          <app-game-container class="container" [data]="data" [gameData]="data.game" [lines]="data.winByLines" (onAction)="handleAction($event)" #gameContainer></app-game-container>
         </div>
         <div class="informationText">
           <span> {{ informationText }}</span>
