--- a/src/app/Views/Elements/label-value/label-value.component.html
+++ b/src/app/Views/Elements/label-value/label-value.component.html
@@ -1,4 +1,4 @@
 <div class="content">
     <div class="label"> {{ label | uppercase }} </div>
-    <div class="value"> {{ ammount }} </div>
+    <div class="value"> {{ ammount | number : '1.2-2' }} </div>
 </div>
