--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -2,17 +2,11 @@
     <div class="block balance">
         <app-label-value label="balance" [hasAnimation]="false" [value]="balance"></app-label-value>
     </div>
-    <!-- <div class="block value">
-        <app-counter [value]="2" [minValue]="1" [maxValue]="10"></app-counter>
-    </div>
-    <div class="block bet">
-        <app-dropdown [allElements]="nominales"></app-dropdown>
-    </div> -->
     <div class="block nominales">
         <app-bet-block *ngFor="let item of betMultipliers;let i=index" [spinning]="data.game.spinning" currency="GEL" [value]="bet(item)" [index]="i" [isSelected]="bet(item) == selectedBet" (onAction)="bubbleAction($event)"></app-bet-block>
     </div>
     <div class="block last_win">
-        <app-label-value label="last win" [hasAnimation]="true" [value]="wonAmmount()"></app-label-value>
+        <app-label-value label="last win" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()"></app-label-value>
     </div>
     <div class="block action_buttons">
         <div class="icon info"></div>
