fix small issues add autospin selector

--- a/src/app/Views/Elements/bonus-bet/bonus-bet.component.html
+++ b/src/app/Views/Elements/bonus-bet/bonus-bet.component.html
@@ -1,6 +1,6 @@
 <div class="cont">
     <div class="text-block">
-        <div class="title"> Bet EUR </div>
+        <div class="title"> Bet GEL </div>
         <div class="bet">  {{ bet.toFixed(2) }} </div>
     </div>
     <div class="arrows-block">
