--- a/src/app/Views/lines/lines.component.html
+++ b/src/app/Views/lines/lines.component.html
@@ -8,7 +8,8 @@
     </div>
     <div class="buttons" *ngIf="hasButtons"  [ngStyle]="{'opacity': data.game.spinning == true && bonusInprogress == false ? 0 : 1}">
         <div class="block">
-            <app-nominales-selector class="nominales-selector" *ngIf="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
+            <app-nominales-selector class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
+            <app-autospin-selector class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedNominale]="selectedNominale" [nominales]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
             <div [ngStyle]="{'opacity': bonusInprogress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
             <div class="spin" (click)="onSpin()" #spinButton></div>
             <div [ngStyle]="{'opacity': bonusInprogress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
