--- a/src/app/Views/Elements/autospin-selector/autospin-selector.component.html
+++ b/src/app/Views/Elements/autospin-selector/autospin-selector.component.html
@@ -1,7 +1,7 @@
 <div class="cont" [ngClass]="{'open': open == true}">
     <div class="block">
-        <div class="item" [ngClass]="{'selected': nominale == selectedNominale}" *ngFor="let nominale of nominales" (click)="selectNominale(nominale)">
-            {{ nominale > 0 ? nominale : '&#8734;' }}
+        <div class="item" [ngClass]="{'selected': spinCounter == selectedCounter}" *ngFor="let spinCounter of spinCounters" (click)="selectNominale(spinCounter)">
+            {{ spinCounter > 0 ? spinCounter : '&#8734;' }}
         </div>
     </div>
 </div>
