--- a/src/app/Views/lines/lines.component.scss
+++ b/src/app/Views/lines/lines.component.scss
@@ -104,6 +104,29 @@
                 &.animate {
                     transform: scale(1.1);
                 }
+                &.stop {
+                    background-image: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: rgba(0, 0, 0, 0.8);
+                    border: 3px solid #ccc;
+                    border-radius: 100%;
+                    width: 175px;
+                    height: 175px;
+                    .spinsCounter {
+                        width: 45px;
+                        height: 45px;
+                        background: linear-gradient(#DDDDDD,#7B7B7B);
+                        font-size: 17px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        &.infiniteLoop {
+                            font-size: 25px;
+                        }
+                    }
+                }
             }
         }
     }
@@ -152,6 +175,10 @@
                 .spin {
                     width: 155px;
                     height: 200px;
+                    &.stop {
+                        width: 155px;
+                        height: 155px;
+                    }
                 }
             }
         }
@@ -188,6 +215,10 @@
                 .spin {
                     width: 145px;
                     height: 185px;
+                    &.stop {
+                        width: 145px;
+                        height: 145px;
+                    }
                 }
             }
         }
@@ -224,6 +255,10 @@
                 .spin {
                     width: 145px;
                     height: 185px;
+                    &.stop {
+                        width: 145px;
+                        height: 145px;
+                    }
                 }
             }
         }
@@ -275,6 +310,10 @@
                 .spin {
                     width: 100px;
                     height: 170px;
+                    &.stop {
+                        width: 100px;
+                        height: 100px;
+                    }
                 }
             }
         }
@@ -328,6 +367,10 @@
                 .spin {
                     width: 40px;
                     height: 40px;
+                    &.stop {
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
         }
