--- a/src/app/Modal/game-information/game-information.component.html
+++ b/src/app/Modal/game-information/game-information.component.html
@@ -132,6 +132,30 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="data full_width">
+                    <div class="item">
+                        <div class="symbol cherry"></div>
+                        <div class="symbol lemon"></div>
+                        <div class="info">
+                            <div class="ammount_count">
+                                <div class="count">5</div>
+                                <div class="ammount"> 100 GEL</div>
+                            </div>
+                            <div class="ammount_count">
+                                <div class="count">4</div>
+                                <div class="ammount"> 30 GEL</div>
+                            </div>
+                            <div class="ammount_count">
+                                <div class="count">3</div>
+                                <div class="ammount"> 10 GEL</div>
+                            </div>
+                        </div>
+                        <div class="symbol plum"></div>
+                        <div class="symbol orange"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="menu">
