--- a/src/app/Views/lines/lines.component.html
+++ b/src/app/Views/lines/lines.component.html
@@ -13,7 +13,7 @@
             <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
             <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
                 <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
-                    {{ isInfinite ? '&#8734;' : spinsRemaining }}
+                    {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
                 </div>
             </div>
             <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
