--- a/src/app/Views/lines/lines.component.html
+++ b/src/app/Views/lines/lines.component.html
@@ -6,10 +6,10 @@
         </div>
         {{ line }}
     </div>
-    <div class="buttons" *ngIf="hasButtons"  [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}">
+    <div class="buttons" isSelector=true *ngIf="hasButtons"  [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}">
         <div class="block">
-            <app-nominales-selector class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
-            <app-autospin-selector class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedCounter]="selectedNominale" [spinCounters]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
+            <app-nominales-selector isNomminaleSelector=true class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
+            <app-autospin-selector isAutospinSelector=true class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedCounter]="selectedNominale" [spinCounters]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
             <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
             <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
                 <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
