--- a/src/app/Views/game-container/game-container.component.html
+++ b/src/app/Views/game-container/game-container.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <div class="game">
-        <app-game class="gameContainer" [gameData]="gameData" [data]="data" [lines]="lines" (onAction)="bubbleAction($event)" #gameContainer></app-game>
+        <app-game class="gameContainer" [cancelAnimations]="gameData.cancelAnimations" [gameData]="gameData" [data]="data" [lines]="lines" (onAction)="bubbleAction($event)" #gameContainer></app-game>
     </div>
 </div>
