--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -9,7 +9,7 @@ section {
         width: 100%;
         max-width: 400px;
         height: 60px;
-        background-image: url('../../assets/headline.png');
+        background-image: url('../../assets/logo.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
