--- a/src/app/Views/action-panel/action-panel.component.html
+++ b/src/app/Views/action-panel/action-panel.component.html
@@ -1,12 +1,12 @@
 <div class="content">
     <div class="block balance">
-        <app-label-value label="balance" [hasAnimation]="false" [value]="balance"></app-label-value>
+        <app-label-value label="balance" [spinning]="data.game.spinning" [hasAnimation]="false" [value]="balance"></app-label-value>
     </div>
     <div class="block nominales">
         <app-bet-block *ngFor="let item of betMultipliers;let i=index" [spinning]="data.game.spinning" currency="GEL" [value]="bet(item)" [index]="i" [isSelected]="bet(item) == selectedBet" (onAction)="bubbleAction($event)"></app-bet-block>
     </div>
     <div class="block last_win">
-        <app-label-value [label]="isBonus ? 'win' : 'last win'" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()"></app-label-value>
+        <app-label-value [spinning]="data.game.spinning" [label]="isBonus ? 'win' : 'last win'" [hasAnimation]="true" [isBonus]="isBonus" [value]="wonAmmount()"></app-label-value>
     </div>
     <div class="block action_buttons">
         <div class="icon info" (click)="gameInfo('info')"></div>
